Revert "Mapping between the existing API and the new data model"